[project]
name = "fleece_network"
version = "0.0.1"
authors = [{ name = "Linyu Wu", email = "celve03@gmail.com" }]
description = "P2P socket built on aiortc."
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["uvicorn", "websockets", "toml", "aiortc", "aioconsole"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["peerrtc"]
